# DistL1_2

./: README.md  USAGE.md  evaluation_models.json  llm.py  prompt.py
equational-theories-stage1-judge-main/equational-theories-stage1-judge-main/: README.md  judge.py  models.py  pyproject.toml
equational-theories-stage1-judge-main/equational-theories-stage1-judge-main/examples/: example_complete_prompt.txt  run_smoke.py
equational-theories-stage1-judge-main/equational-theories-stage1-judge-main/tests/: test_judge.py  test_models.py  test_prompt.py  test_run_smoke.py
examples/: README.md  problems_hard3_20.jsonl
tests/: test_llm.py
workspace/: prompt_template.txt
